--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,30 @@
 {
-    "workbench.colorCustomizations": {
-        "activityBar.background": "#283100",
-        "titleBar.activeBackground": "#384500",
-        "titleBar.activeForeground": "#F5FFC8"
-    }
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "deno.enable": true,
+  "deno.enablePaths": [
+    "supabase/functions"
+  ],
+  "deno.lint": true,
+  "deno.unstable": [
+    "bare-node-builtins",
+    "byonm",
+    "sloppy-imports",
+    "unsafe-proto",
+    "webgpu",
+    "broadcast-channel",
+    "worker-options",
+    "cron",
+    "kv",
+    "ffi",
+    "fs",
+    "http",
+    "net"
+  ],
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#283100",
+    "titleBar.activeBackground": "#384500",
+    "titleBar.activeForeground": "#F5FFC8"
+  }
 }
