--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.468.0",
     "next": "^15.5.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-qr-reader": "^3.0.0-beta-1",
     "tailwind-merge": "^2.5.0"
   },
   "devDependencies": {
