feat: replace html5-qrcode with @zxing/browser for improved QR scanning functionality

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "qrcode.react": "^4.2.0",
   "react": "^19.0.0",
   "react-dom": "^19.0.0",
-  "html5-qrcode": "^2.3.6",
+  "@zxing/browser": "^0.0.10",
     "tailwind-merge": "^2.5.0"
   },
   "devDependencies": {
